--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.3.3",
-    "gh-pages": "^5.0.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -15,9 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
-    "predeploy": "yarn build"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://minpeter.github.io/cat_showcase/"
+  "homepage": "https://minpeter.github.io/"
 }
