--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://minpeter.github.io/"
+  "homepage": "https://minpeter.github.io/cat_showcase/"
 }
